syntax = "proto3";
package org.wcy123.protobuf.your.wechat;
import "google/protobuf/any.proto";

message WebInitResponse {
    BaseResponse baseResponse = 1 [ json_name = "BaseResponse" ];
    int32 count = 2 [ json_name = "Count" ];
    repeated ContactList contactList = 3 [ json_name = "ContactList" ];
    SyncKey syncKey = 4 [ json_name = "SyncKey" ];
    User user = 5 [ json_name = "User" ];
    string chatSet = 6 [ json_name = "ChatSet" ];
    string skey = 7 [ json_name = "SKey" ];
    int32 clientVersion = 8 [ json_name = "ClientVersion" ];
    int32 systemTime = 9 [ json_name = "SystemTime" ];
    int32 grayScale = 10 [ json_name = "GrayScale" ];
    int32 inviteStartCount = 11 [ json_name = "InviteStartCount" ];
    int32 mpsubscribeMsgCount = 12 [ json_name = "MPSubscribeMsgCount" ];
    repeated MpsubscribeMsgList mpsubscribeMsgList = 13 [ json_name = "MPSubscribeMsgList" ];
    int32 clickReportInterval = 14 [ json_name = "ClickReportInterval" ];
}
message MpsubscribeMsgList {
    string userName = 1 [ json_name = "UserName" ];
    int32 mparticleCount = 2 [ json_name = "MPArticleCount" ];
    repeated MparticleList mparticleList = 3 [ json_name = "MPArticleList" ];
    int32 time = 4 [ json_name = "Time" ];
    string nickName = 5 [ json_name = "NickName" ];
}
message MparticleList {
    string title = 1 [ json_name = "Title" ];
    string digest = 2 [ json_name = "Digest" ];
    string cover = 3 [ json_name = "Cover" ];
    string url = 4 [ json_name = "Url" ];
}
message User {
    int32 uin = 1 [ json_name = "Uin" ];
    string userName = 2 [ json_name = "UserName" ];
    string nickName = 3 [ json_name = "NickName" ];
    string headImgUrl = 4 [ json_name = "HeadImgUrl" ];
    string remarkName = 5 [ json_name = "RemarkName" ];
    string pyinitial = 6 [ json_name = "PYInitial" ];
    string pyquanPin = 7 [ json_name = "PYQuanPin" ];
    string remarkPyinitial = 8 [ json_name = "RemarkPYInitial" ];
    string remarkPyquanPin = 9 [ json_name = "RemarkPYQuanPin" ];
    int32 hideInputBarFlag = 10 [ json_name = "HideInputBarFlag" ];
    int32 starFriend = 11 [ json_name = "StarFriend" ];
    int32 sex = 12 [ json_name = "Sex" ];
    string signature = 13 [ json_name = "Signature" ];
    int32 appAccountFlag = 14 [ json_name = "AppAccountFlag" ];
    int32 verifyFlag = 15 [ json_name = "VerifyFlag" ];
    int32 contactFlag = 16 [ json_name = "ContactFlag" ];
    int32 webWxPluginSwitch = 17 [ json_name = "WebWxPluginSwitch" ];
    int32 headImgFlag = 18 [ json_name = "HeadImgFlag" ];
    int32 snsFlag = 19 [ json_name = "SnsFlag" ];
}
message SyncKey {
    int32 count = 1 [ json_name = "Count" ];
    repeated List list = 2 [ json_name = "List" ];
}
message List {
    int32 key = 1 [ json_name = "Key" ];
    int32 val = 2 [ json_name = "Val" ];
}
message ContactList {
    int32 uin = 1 [ json_name = "Uin" ];
    string userName = 2 [ json_name = "UserName" ];
    string nickName = 3 [ json_name = "NickName" ];
    string headImgUrl = 4 [ json_name = "HeadImgUrl" ];
    int32 contactFlag = 5 [ json_name = "ContactFlag" ];
    int32 memberCount = 6 [ json_name = "MemberCount" ];
    repeated MemberList memberList = 7 [ json_name = "MemberList" ];
    string remarkName = 8 [ json_name = "RemarkName" ];
    int32 hideInputBarFlag = 9 [ json_name = "HideInputBarFlag" ];
    int32 sex = 10 [ json_name = "Sex" ];
    string signature = 11 [ json_name = "Signature" ];
    int32 verifyFlag = 12 [ json_name = "VerifyFlag" ];
    int32 ownerUin = 13 [ json_name = "OwnerUin" ];
    string pyinitial = 14 [ json_name = "PYInitial" ];
    string pyquanPin = 15 [ json_name = "PYQuanPin" ];
    string remarkPyinitial = 16 [ json_name = "RemarkPYInitial" ];
    string remarkPyquanPin = 17 [ json_name = "RemarkPYQuanPin" ];
    int32 starFriend = 18 [ json_name = "StarFriend" ];
    int32 appAccountFlag = 19 [ json_name = "AppAccountFlag" ];
    int32 statues = 20 [ json_name = "Statues" ];
    uint32 attrStatus = 21 [ json_name = "AttrStatus" ];
    string province = 22 [ json_name = "Province" ];
    string city = 23 [ json_name = "City" ];
    string alias = 24 [ json_name = "Alias" ];
    int32 snsFlag = 25 [ json_name = "SnsFlag" ];
    int32 uniFriend = 26 [ json_name = "UniFriend" ];
    string displayName = 27 [ json_name = "DisplayName" ];
    int32 chatRoomId = 28 [ json_name = "ChatRoomId" ];
    string keyWord = 29 [ json_name = "KeyWord" ];
    string encryChatRoomId = 30 [ json_name = "EncryChatRoomId" ];
    int32 isOwner = 31 [ json_name = "IsOwner" ];
}
message BaseResponse {
    int32 ret = 1 [ json_name = "Ret" ];
    string errMsg = 2 [ json_name = "ErrMsg" ];
}


message ContactListResponse {
    BaseResponse baseResponse = 1 [ json_name = "BaseResponse" ];
    int32 memberCount = 2 [ json_name = "MemberCount" ];
    repeated MemberList memberList = 3 [ json_name = "MemberList" ];
    int32 seq = 4 [ json_name = "Seq" ];
}
message MemberList {
    int32 uin = 1 [ json_name = "Uin" ];
    string userName = 2 [ json_name = "UserName" ];
    string nickName = 3 [ json_name = "NickName" ];
    string headImgUrl = 4 [ json_name = "HeadImgUrl" ];
    int32 contactFlag = 5 [ json_name = "ContactFlag" ];
    int32 memberCount = 6 [ json_name = "MemberCount" ];
    string remarkName = 8 [ json_name = "RemarkName" ];
    int32 hideInputBarFlag = 9 [ json_name = "HideInputBarFlag" ];
    int32 sex = 10 [ json_name = "Sex" ];
    string signature = 11 [ json_name = "Signature" ];
    int32 verifyFlag = 12 [ json_name = "VerifyFlag" ];
    int32 ownerUin = 13 [ json_name = "OwnerUin" ];
    string pyinitial = 14 [ json_name = "PYInitial" ];
    string pyquanPin = 15 [ json_name = "PYQuanPin" ];
    string remarkPyinitial = 16 [ json_name = "RemarkPYInitial" ];
    string remarkPyquanPin = 17 [ json_name = "RemarkPYQuanPin" ];
    int32 starFriend = 18 [ json_name = "StarFriend" ];
    int32 appAccountFlag = 19 [ json_name = "AppAccountFlag" ];
    int32 statues = 20 [ json_name = "Statues" ];
    uint32 attrStatus = 21 [ json_name = "AttrStatus" ];
    string province = 22 [ json_name = "Province" ];
    string city = 23 [ json_name = "City" ];
    string alias = 24 [ json_name = "Alias" ];
    int32 snsFlag = 25 [ json_name = "SnsFlag" ];
    int32 uniFriend = 26 [ json_name = "UniFriend" ];
    string displayName = 27 [ json_name = "DisplayName" ];
    int32 chatRoomId = 28 [ json_name = "ChatRoomId" ];
    string keyWord = 29 [ json_name = "KeyWord" ];
    string encryChatRoomId = 30 [ json_name = "EncryChatRoomId" ];
    int32 isOwner = 31 [ json_name = "IsOwner" ];
}
message SyncMessageResponse {
    BaseResponse baseResponse = 1 [ json_name = "BaseResponse" ];
    int32 addMsgCount = 2 [ json_name = "AddMsgCount" ];
    repeated AddMsgList addMsgList = 3 [ json_name = "AddMsgList" ];
    int32 modContactCount = 4 [ json_name = "ModContactCount" ];
    repeated google.protobuf.Any  modContactList = 5 [ json_name = "ModContactList" ];
    int32 delContactCount = 6 [ json_name = "DelContactCount" ];
    repeated google.protobuf.Any  delContactList = 7 [ json_name = "DelContactList" ];
    int32 modChatRoomMemberCount = 8 [ json_name = "ModChatRoomMemberCount" ];
    repeated google.protobuf.Any  modChatRoomMemberList = 9 [ json_name = "ModChatRoomMemberList" ];
    Profile profile = 10 [ json_name = "Profile" ];
    int32 continueFlag = 11 [ json_name = "ContinueFlag" ];
    SyncKey syncKey = 12 [ json_name = "SyncKey" ];
    string skey = 13 [ json_name = "SKey" ];
    SyncKey syncCheckKey = 14 [ json_name = "SyncCheckKey" ];
}


message Profile {
    int32 bitFlag = 1 [ json_name = "BitFlag" ];
    UserName userName = 2 [ json_name = "UserName" ];
    NickName nickName = 3 [ json_name = "NickName" ];
    int32 bindUin = 4 [ json_name = "BindUin" ];
    BindEmail bindEmail = 5 [ json_name = "BindEmail" ];
    BindMobile bindMobile = 6 [ json_name = "BindMobile" ];
    int32 status = 7 [ json_name = "Status" ];
    int32 sex = 8 [ json_name = "Sex" ];
    int32 personalCard = 9 [ json_name = "PersonalCard" ];
    string alias = 10 [ json_name = "Alias" ];
    int32 headImgUpdateFlag = 11 [ json_name = "HeadImgUpdateFlag" ];
    string headImgUrl = 12 [ json_name = "HeadImgUrl" ];
    string signature = 13 [ json_name = "Signature" ];
}
message BindMobile {
    string buff = 1 [ json_name = "Buff" ];
}
message BindEmail {
    string buff = 1 [ json_name = "Buff" ];
}
message NickName {
    string buff = 1 [ json_name = "Buff" ];
}
message UserName {
    string buff = 1 [ json_name = "Buff" ];
}
message AddMsgList {
    string msgId = 1 [ json_name = "MsgId" ];
    string fromUserName = 2 [ json_name = "FromUserName" ];
    string toUserName = 3 [ json_name = "ToUserName" ];
    int32 msgType = 4 [ json_name = "MsgType" ];
    string content = 5 [ json_name = "Content" ];
    int32 status = 6 [ json_name = "Status" ];
    int32 imgStatus = 7 [ json_name = "ImgStatus" ];
    int32 createTime = 8 [ json_name = "CreateTime" ];
    int32 voiceLength = 9 [ json_name = "VoiceLength" ];
    int32 playLength = 10 [ json_name = "PlayLength" ];
    string fileName = 11 [ json_name = "FileName" ];
    string fileSize = 12 [ json_name = "FileSize" ];
    string mediaId = 13 [ json_name = "MediaId" ];
    string url = 14 [ json_name = "Url" ];
    int32 appMsgType = 15 [ json_name = "AppMsgType" ];
    int32 statusNotifyCode = 16 [ json_name = "StatusNotifyCode" ];
    string statusNotifyUserName = 17 [ json_name = "StatusNotifyUserName" ];
    RecommendInfo recommendInfo = 18 [ json_name = "RecommendInfo" ];
    int32 forwardFlag = 19 [ json_name = "ForwardFlag" ];
    AppInfo appInfo = 20 [ json_name = "AppInfo" ];
    int32 hasProductId = 21 [ json_name = "HasProductId" ];
    string ticket = 22 [ json_name = "Ticket" ];
    int32 imgHeight = 23 [ json_name = "ImgHeight" ];
    int32 imgWidth = 24 [ json_name = "ImgWidth" ];
    int32 subMsgType = 25 [ json_name = "SubMsgType" ];
    double newMsgId = 26 [ json_name = "NewMsgId" ];
    string oriContent = 27 [ json_name = "OriContent" ];
}
message AppInfo {
    string appId = 1 [ json_name = "AppID" ];
    int32 type = 2 [ json_name = "Type" ];
}
message RecommendInfo {
    string userName = 1 [ json_name = "UserName" ];
    string nickName = 2 [ json_name = "NickName" ];
    int32 qqnum = 3 [ json_name = "QQNum" ];
    string province = 4 [ json_name = "Province" ];
    string city = 5 [ json_name = "City" ];
    string content = 6 [ json_name = "Content" ];
    string signature = 7 [ json_name = "Signature" ];
    string alias = 8 [ json_name = "Alias" ];
    int32 scene = 9 [ json_name = "Scene" ];
    int32 verifyFlag = 10 [ json_name = "VerifyFlag" ];
    int32 attrStatus = 11 [ json_name = "AttrStatus" ];
    int32 sex = 12 [ json_name = "Sex" ];
    string ticket = 13 [ json_name = "Ticket" ];
    int32 opCode = 14 [ json_name = "OpCode" ];
}

message UserResponse {
    string uin = 1;
    User user = 2;
    bool  online = 3;
    int32 numberOfContacts = 4;
}
